--- a/namsicd-cli/Cargo.toml
+++ b/namsicd-cli/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "namsicd-server"
+name = "namsicd-cli"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 prost = "0.13"
-rand = "0.9"
 tonic = "0.13"
 tokio = { version = "1", features = ["full"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
 
 [build-dependencies]
 tonic-build = "0.13"
